--- a/index.html
+++ b/index.html
@@ -1,268 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Blooming Dream</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Pacifico&family=Quicksand&display=swap" rel="stylesheet" />
-  <style>
-    :root {
-      --tan: #d7ce93;
-      --peach: #efebce;
-      --rose: #d8a48f;
-      --mauve: #bb8588;
-      --white: #fff;
-      --shadow: rgba(0, 0, 0, 0.1);
-    }
-
-    html {
-      scroll-behavior: smooth;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Quicksand', sans-serif;
-      background-color: var(--tan);
-      color: #5e4c3b;
-      cursor: none;
-    }
-
-    .custom-cursor {
-      width: 16px;
-      height: 16px;
-      background-color: var(--rose);
-      border-radius: 50%;
-      position: fixed;
-      pointer-events: none;
-      transform: translate(-50%, -50%);
-      mix-blend-mode: multiply;
-      z-index: 10000;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('https://images.unsplash.com/photo-1496293455970-f8581aae0e3b?auto=format&fit=crop&w=1600&q=80');
-      background-size: cover;
-      background-position: center;
-      opacity: 0.2;
-      filter: blur(6px);
-      z-index: -1;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: var(--peach);
-      padding: 30px 40px;
-      border-bottom: 6px solid var(--tan);
-      border-radius: 28px 28px 0 0;
-      box-shadow: 0 6px 20px var(--shadow);
-      margin-bottom: 40px;
-    }
-
-    .logo {
-      font-family: 'Pacifico', cursive;
-      font-size: 2.8rem;
-      color: var(--mauve);
-    }
-
-    nav a {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      color: var(--rose);
-      text-decoration: none;
-      margin-left: 30px;
-      font-size: 1.1rem;
-    }
-
-    nav a:hover {
-      color: var(--tan);
-    }
-
-    main {
-      border-radius: 0 0 28px 28px;
-      padding: 40px;
-    }
-
-    .about-container {
-      background-color: var(--peach);
-      border-radius: 20px;
-      box-shadow: 0 4px 15px var(--shadow);
-      margin-bottom: 60px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .checkerboard-top {
-      display: flex;
-      width: 100%;
-      height: 40px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .checkerboard-top::before {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 400%;
-      background-image: repeating-linear-gradient(
-        0deg,
-        var(--mauve) 0,
-        var(--mauve) 20px,
-        var(--white) 20px,
-        var(--white) 40px
-      );
-      animation: scrollCheck 4s linear infinite;
-    }
-
-    @keyframes scrollCheck {
-      from { transform: translateY(0); }
-      to { transform: translateY(-40px); }
-    }
-
-    .about-inner {
-      padding: 40px;
-    }
-
-    .about-inner h1 {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      font-size: 3rem;
-      color: var(--rose);
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    .about-section {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .about-text {
-      max-width: 600px;
-    }
-
-    .introvert-bg {
-      font-weight: 600;
-      font-size: 1.2rem;
-      line-height: 1.6;
-      text-align: justify;
-      color: var(--mauve);
-    }
-
-    .image-group {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
-    }
-
-    .profile-frame {
-      width: 200px;
-      height: 200px;
-      border-radius: 18px;
-      border: 8px solid var(--rose);
-      object-fit: cover;
-      box-shadow: 0 4px 15px var(--shadow);
-      background: var(--white);
-    }
-
-    .profile-frame:nth-child(1) { transform: rotate(-3deg); }
-    .profile-frame:nth-child(2) { transform: rotate(2deg); }
-    .profile-frame:nth-child(3) { transform: rotate(-2deg); }
-    .profile-frame:nth-child(4) { transform: rotate(3deg); }
-
-    .flower-deco {
-      position: absolute;
-      width: 60px;
-      bottom: -20px;
-      mix-blend-mode: multiply;
-      filter: drop-shadow(0 3px 5px rgba(0,0,0,0.2));
-      animation: float 4s ease-in-out infinite;
-    }
-
-    .flower-deco:nth-child(1) { left: 20px; animation-delay: 0s; }
-    .flower-deco:nth-child(2) { left: 100px; animation-delay: 0.2s; }
-    .flower-deco:nth-child(3) { right: 100px; animation-delay: 0.4s; }
-    .flower-deco:nth-child(4) { right: 20px; animation-delay: 0.6s; }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    @media (max-width: 900px) {
-      .about-section {
-        flex-direction: column;
-      }
-
-      .profile-frame {
-        width: 160px;
-        height: 160px;
-      }
-    }
-  </style>
+	<meta charset="UTF-8">
+	<title></title>
 </head>
 <body>
-  <div class="custom-cursor"></div>
-
-  <header>
-    <div class="logo">Blooming Dream</div>
-    <nav>
-      <a href="index.html">HOME</a>
-      <a href="steps.html">STEP BY STEP GUIDE</a>
-      <a href="inspirations.html">INSPIRATION & RESOURCES</a>
-    </nav>
-  </header>
-
-  <main>
-    <!-- HOME SECTION -->
-    <section id="home" class="about-container">
-      <div class="checkerboard-top"></div>
-      <div class="about-inner">
-        <h1>ABOUT THE FLORIST</h1>
-        <div class="about-section">
-          <div class="about-text">
-            <div class="introvert-bg">
-              <p>
-                My name is Cempaka Nuranisah binti Mohammad Rezuan, a student from Group C and also carrying the matric number 231420028. Just like the flower I’m named after, I was born to bloom.<br><br>
-                From petals to perfume, I find magic in every flower. Their gentle grace, their silent stories, and the way they soften even the hardest of days — all of it speaks to my soul.<br><br>
-                It’s no surprise that my dream is to become a florist.<br><br>
-                To me, floristry is not just about arranging stems and colors. It's about sharing emotion without words, painting joy with blossoms, and bringing comfort with fragrance and form.<br><br>
-                Flowers have always been my quiet companions, my soft inspirations. I long to craft arrangements that whisper beauty, that brighten rooms, that remind people they are loved.
-              </p>
-            </div>
-          </div>
-          <div class="image-group">
-            <img src="florist.png" class="profile-frame" alt="Florist" />
-            <img src="bouquetone.jpg" class="profile-frame" alt="Bouquet One" />
-            <img src="wedding.jpg" class="profile-frame" alt="Wedding" />
-            <img src="bloomies.jpg" class="profile-frame" alt="Bloomies" />
-          </div>
-        </div>
-      </div>
-      <img src="flowerone.jpeg" class="flower-deco" alt="Flower Decoration" />
-      <img src="flowertwo.jpeg" class="flower-deco" alt="Flower Decoration" />
-      <img src="flowerthree.jpeg" class="flower-deco" alt="Flower Decoration" />
-      <img src="flowerfour.jpeg" class="flower-deco" alt="Flower Decoration" />
-    </section>
-  </main>
-
-  <script>
-    const cursor = document.querySelector('.custom-cursor');
-    document.addEventListener('mousemove', e => {
-      cursor.style.left = e.clientX + 'px';
-      cursor.style.top = e.clientY + 'px';
-    });
-  </script>
+	<h1></h1>
+	<ul>
+		<li><a href="home.html">HOME</a></li>
+		<li><a href="steps.html">STEP</a></li>
+		<li><a href="resources.html">RESOURCES</a></li>
+	</ul>
 </body>
 </html>
